--- a/Famersprofile.html
+++ b/Famersprofile.html
@@ -723,7 +723,7 @@
     document.getElementById('homeBtn').addEventListener('click', function() {
       alert('Returning to Home Dashboard');
       // In a real application, this would redirect to the home page
-       window.location.href = '/index.html';
+       window.location.href = 'index.html';
     });
 
     document.getElementById('logoutBtn').addEventListener('click', function() {
@@ -943,3 +943,4 @@
 </body>
 
 </html>
+
