Update print statement from 'Hello' to 'Goodbye'

--- a/Famersprofile.html
+++ b/Famersprofile.html
@@ -723,7 +723,8 @@
     document.getElementById('homeBtn').addEventListener('click', function() {
       alert('Returning to Home Dashboard');
       // In a real application, this would redirect to the home page
-       window.location.href = 'index.html';
+      window.location.href = 'https://daerlhelpdesk.github.io/CASP/index.html';
+
     });
 
     document.getElementById('logoutBtn').addEventListener('click', function() {
@@ -943,4 +944,5 @@
 </body>
 
 </html>
+
 
